# whale

./: .gitignore  Dockerfile  docker-compose.yaml  run-app.sh
app/: config.py  main.py  pyproject.toml  yoyo.ini
app/api/: dependecies.py  leads.py  tower.py
app/db/: db.py
app/exceptions/: base.py
app/helpers/: directions.py  time_manager.py
app/migrations/: 20240104_01_9BmAr-init-tables.py
app/schemas/: helpers.py  leads.py  tower.py
app/services/: crm.py  db.py  leads.py  tg.py  tower.py
